--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     // ❗ Debug properly using the Console
 
     // 👉 CHALLENGE 1
-    function profileActivation() {
+    function profileActivation(profile, reason) {
       // 🧠 profileActivation takes two arguments, profile and reason, which are an object and a string respectively
       //  The reason arg is only used -and therefore required- to deactivate profiles, not to activate them
       //  The profile arg has an `active` property holding a Boolean value
@@ -85,10 +85,27 @@
       //    * If the profile is active but it has a `reason` prop, return the string "confirm status manually"
       //    * If the profile is **missing** an `active` prop, return the string "impossible to ascertain status"
       // 🌟 HINT: to confirm the existence of a prop, check that its value is not undefined
+      if(!profile.hasOwnProperty('active'))
+        return 'impossible to ascertain status';
+      if(
+        !profile.active && !profile.hasOwnProperty('reason') ||
+        profile.active && profile.hasOwnProperty('reason')
+        )
+        return 'confirm status manually';
+      if(profile.active === true) {
+        profile.active = false;
+        profile.reason = reason;
+        return profile;
+      }
+      if(profile.active === false) {
+        profile.active = true;
+        delete profile.reason;
+        return profile;
+      }
     }
 
     // 👉 CHALLENGE 2
-    function mineSweeper() {
+    function mineSweeper(grid, x, y) {
       // 🧠 mineSweeper takes a grid as its first argument, and coordinates x and y as the second and third args
       //  The grid is an array of arrays in the following format: [["🟥","🟦","🟥"],["🟦","🟥","🟥"],["🟥","🟦","🟦"]]
       //  Each subarray is a row of the grid, the first subarray being the top row:
@@ -106,10 +123,17 @@
       //    * If the player lands on blue, return the string "🟦 🥳"
       // 🧠 Edge cases:
       //    * If the x or y coordinates are under 1 or over 3, return the string "invalid coordinates"
+    if(x < 1 || x > 3 || y < 1 || y > 3)
+      return 'invalid coordinates';
+    if(grid[y - 1][x - 1] === '🟥') {
+      return "🟥 💀"
+    } else {
+      return '🟦 🥳'
+    }
     }
 
     // 👉 CHALLENGE 3
-    function booleanize() {
+    function booleanize(obj) {
       // 🧠 booleanize takes an object as its single argument, which can have any number of properties
       // Loop over the properties and then return the object, after applying the following transformations:
       //    * If a value is the number zero, it must be transformed into the Boolean false
@@ -118,10 +142,27 @@
       // 🧠 Edge cases:
       //    * If a property name exceeds 9 characters, return the string "shorten all prop names to 9 chars or less"
       // 🌟 HINT: careful not to perform any unintended changes on the object
+      const arr = Object.entries(obj)
+      for(let i = 0; i < arr.length; i++) {
+        if(arr[i][0].length > 9)
+          return 'shorten all prop names to 9 chars or less';
+      }
+      for(let [k, v] of Object.entries(obj)) {
+        if(v === 0) {
+          obj[k] = false;
+        }
+        if(v === 1) {
+          obj[k] = true;
+        }
+        if(v === null) {
+          delete obj[k];
+        }
+      }
+      return obj;
     }
 
     // 👉 CHALLENGE 4
-    function scrub() {
+    function scrub(string, forbidden) {
       // 🧠 scrub takes a string "text" as its first argument, and an array of forbidden words "forbidden" as its second
       // Any word in the text included in the array of forbidden words is replaced with a word of equal length but made of lowcase "x"
       // The scrubbed text is then returned from the function, as seen in the examples below
@@ -133,10 +174,23 @@
       //    scrub("aces high", ["high", "aces", "hearts"]) // returns "xxxx xxxx"
       //    scrub("", ["high", "aces""]) // returns ""
       // 🌟 HINT: useful array methods to use are `push`, `indexOf`, `split`, `join`
+      string = string.split(' ')
+      string.map(word => {
+        if(forbidden.includes(word)) {
+          let count = word.length;
+          let censor = ''
+          while(count !== 0) {
+            censor += 'x';
+            count--;
+          }
+          string[string.indexOf(word)] = censor;
+        }
+      })
+      return string.join(' ');
     }
 
     // 👉 CHALLENGE 5
-    function normalizePhoneNumber() {
+    function normalizePhoneNumber(str) {
       // 🧠 normalizePhoneNumber takes a string as its only argument, representing a ten-digit number
       // The function returns a string formatted as seen below
       // 🧠 Examples of usage:
@@ -148,6 +202,21 @@
       // 🌟 HINT: instead of looping over the number's digits, loop backwards over a template "(XXX) XXX-XXXX"
       // 🌟 HINT: at each iteration, if the current character is an "X", replace it with the result of popping a digit from the number
       // 🌟 HINT: if you'd rather loop forwards, use `shift` instead of `pop`
+    let template = '(xxx) xxx-xxxx';
+    if(str.length !== 10)
+      return 'type a 10-digit number';
+    let check = parseInt(str);
+    check = check.toString();
+    if(check.length !== 10)
+      return 'invalid phone number';
+    template = template.split('');
+    str = str.split('')
+      template.map(char => {
+      if(char === 'x') {
+        template[template.indexOf(char)] = str.shift();
+      }
+    })
+    return template.join('');
     }
 
     // 👉 CHALLENGE 6 (bonus, NOT graded)
@@ -158,6 +227,18 @@
       // 🌟 HINT: research using `Math.random` to obtain a number from 1 to 6
       // 🌟 HINT: use `while(true)` to throw the dice indefinitely, but avoid an infinite loop by making sure to break out eventually
       // 🌟 HINT: you need to keep track of the total number of throws, as well as how many sixes in a row
+    let count = 0;
+    let rolls = 0;
+    while(count !== 3) {
+      if(Math.floor(Math.random() * 11) === 3) {
+        count++;
+        rolls++;
+      } else {
+      count = 0;
+      rolls++;
+      }
+    }
+    return rolls;
     }
 
     // 🧪 TESTS, do not make any changes below this line ===================
